--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.9.9",
+    "argon2": "^0.27.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "pg": "^8.3.3",
