--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,24 @@
   "name": "hello-graphql-server",
   "version": "0.0.1",
   "devDependencies": {
-    "@types/express": "^4.17.2",
+    "@types/connect-redis": "^0.0.14",
+    "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
     "@types/node": "^12.12.8",
+    "@types/redis": "^2.8.27",
     "nodemon": "^1.19.4",
     "ts-node": "8.5.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "apollo-server-express": "^2.9.9",
     "argon2": "^0.27.0",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^14.5.8",
     "pg": "^8.3.3",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^0.17.5",
     "typeorm": "0.2.20"
