--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.17.8",
