--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/node": "^12.12.8",
@@ -15,6 +16,7 @@
     "apollo-server-express": "^2.9.9",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^14.5.8",
