--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -43,6 +43,7 @@
     "react/jsx-props-no-spreading": 0,
     "react/jsx-indent": 0,
     "react/jsx-curly-newline": 0,
-		"react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}]
+		"react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
+		"react/require-default-props": 0
   }
 }
