--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,15 @@
     "@types/express-session": "^1.17.0",
     "@types/node": "^12.12.8",
     "@types/redis": "^2.8.27",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^1.19.4",
+    "prettier": "^2.1.2",
     "ts-node": "8.5.2",
     "typescript": "^4.0.3"
   },
